{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 229,
  "lineage": "0dc2f3e4-106b-f958-d087-8fca0e746579",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "hackz_ichthyo_nlb_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f13e7c5e4a149c2",
            "association_id": "eipassoc-0421b04ed0f80fae2",
            "domain": "vpc",
            "id": "eipalloc-01f13e7c5e4a149c2",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-04022fb9c8e27b4e1",
            "private_dns": "ip-10-0-1-99.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.99",
            "public_dns": "ec2-18-181-38-132.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.181.38.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hackz-ichthyo-nlb-eip"
            },
            "tags_all": {
              "Name": "hackz-ichthyo-nlb-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hackz_ichthyo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112951833:internet-gateway/igw-06fe338b734bf2e18",
            "id": "igw-06fe338b734bf2e18",
            "owner_id": "471112951833",
            "tags": {
              "Name": "hackz-ichthyo-igw"
            },
            "tags_all": {
              "Name": "hackz-ichthyo-igw"
            },
            "vpc_id": "vpc-01795d2579227bbdb"
          },
          "dependencies": [
            "aws_vpc.hackz_ichthyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hackz_ichthyo_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112951833:loadbalancer/net/hackz-ichthyo-nlb/27f4ce1faa75b147",
            "arn_suffix": "net/hackz-ichthyo-nlb/27f4ce1faa75b147",
            "dns_name": "hackz-ichthyo-nlb-27f4ce1faa75b147.elb.ap-northeast-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:471112951833:loadbalancer/net/hackz-ichthyo-nlb/27f4ce1faa75b147",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "hackz-ichthyo-nlb",
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-01f13e7c5e4a149c2",
                "subnet_id": "subnet-0080a133424f89abc"
              }
            ],
            "subnets": [
              "subnet-0080a133424f89abc"
            ],
            "tags": {
              "Name": "hackz-ichthyo-nlb"
            },
            "tags_all": {
              "Name": "hackz-ichthyo-nlb"
            },
            "vpc_id": "vpc-01795d2579227bbdb",
            "zone_id": "Z31USIVHYNEOWT"
          },
          "dependencies": [
            "aws_eip.hackz_ichthyo_nlb_eip",
            "aws_subnet.hackz_ichthyo_subnet_public",
            "aws_vpc.hackz_ichthyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hackz_ichthyo_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112951833:listener/net/hackz-ichthyo-nlb/27f4ce1faa75b147/c4f95e47d1029123",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112951833:targetgroup/hackz-ichthyo-tg/8f00544cec07e749",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:471112951833:listener/net/hackz-ichthyo-nlb/27f4ce1faa75b147/c4f95e47d1029123",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112951833:loadbalancer/net/hackz-ichthyo-nlb/27f4ce1faa75b147",
            "port": 3000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.hackz_ichthyo_nlb_eip",
            "aws_lb.hackz_ichthyo_nlb",
            "aws_lb_target_group.hackz_ichthyo_tg",
            "aws_subnet.hackz_ichthyo_subnet_public",
            "aws_vpc.hackz_ichthyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hackz_ichthyo_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112951833:targetgroup/hackz-ichthyo-tg/8f00544cec07e749",
            "arn_suffix": "targetgroup/hackz-ichthyo-tg/8f00544cec07e749",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:471112951833:targetgroup/hackz-ichthyo-tg/8f00544cec07e749",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hackz-ichthyo-tg",
            "port": 3000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "hackz-ichthyo-target-group"
            },
            "tags_all": {
              "Name": "hackz-ichthyo-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01795d2579227bbdb"
          },
          "dependencies": [
            "aws_vpc.hackz_ichthyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "hackz_ichthyo_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06fe338b734bf2e18",
            "id": "r-rtb-00229de3cd8c6d5951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00229de3cd8c6d595",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hackz_ichthyo_igw",
            "aws_route_table.hackz_ichthyo_route_table",
            "aws_vpc.hackz_ichthyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hackz_ichthyo_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112951833:route-table/rtb-00229de3cd8c6d595",
            "id": "rtb-00229de3cd8c6d595",
            "owner_id": "471112951833",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fe338b734bf2e18",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hackz-ichthyo-route-table"
            },
            "tags_all": {
              "Name": "hackz-ichthyo-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01795d2579227bbdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hackz_ichthyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hackz_ichthyo_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a17b00ea9c692478",
            "route_table_id": "rtb-00229de3cd8c6d595",
            "subnet_id": "subnet-0080a133424f89abc"
          },
          "dependencies": [
            "aws_route_table.hackz_ichthyo_route_table",
            "aws_subnet.hackz_ichthyo_subnet_public",
            "aws_vpc.hackz_ichthyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hackz_ichthyo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112951833:security-group/sg-0aa448b465683cdce",
            "description": "hackz-ichthyo-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa448b465683cdce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "hackz-ichthyo-sg",
            "name_prefix": "",
            "owner_id": "471112951833",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hackz-ichthyo-ec2-sg"
            },
            "tags_all": {
              "Name": "hackz-ichthyo-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01795d2579227bbdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hackz_ichthyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "hackz_ichthyo_rule_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3010762872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0aa448b465683cdce",
            "security_group_rule_id": "sgr-0f8ea2a72febe9312",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.hackz_ichthyo_sg",
            "aws_vpc.hackz_ichthyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "hackz_ichthyo_rule_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-3481660804",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aa448b465683cdce",
            "security_group_rule_id": "sgr-07f2197278725afc3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.hackz_ichthyo_sg",
            "aws_vpc.hackz_ichthyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hackz_ichthyo_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112951833:subnet/subnet-0080a133424f89abc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0080a133424f89abc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112951833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hackz-ichthyo-subnet-public",
              "Roles": "subnet"
            },
            "tags_all": {
              "Name": "hackz-ichthyo-subnet-public",
              "Roles": "subnet"
            },
            "vpc_id": "vpc-01795d2579227bbdb"
          },
          "dependencies": [
            "aws_vpc.hackz_ichthyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hackz_ichthyo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112951833:vpc/vpc-01795d2579227bbdb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f1a3f10639113be",
            "default_route_table_id": "rtb-07c82e9b7490e55e8",
            "default_security_group_id": "sg-0ade926b794a60217",
            "dhcp_options_id": "dopt-0e898cbee8adfb586",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01795d2579227bbdb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c82e9b7490e55e8",
            "owner_id": "471112951833",
            "tags": {
              "Name": "hackz-ichthyo-vpc",
              "Roles": "vpc"
            },
            "tags_all": {
              "Name": "hackz-ichthyo-vpc",
              "Roles": "vpc"
            }
          }
        }
      ]
    }
  ]
}